# mfcl

./: .gitignore  README.md  eval.py  manifest.scm  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  train.py
.github/workflows/: ci.yml
configs/: config.yaml  defaults.yaml  global.yaml
configs/ablations/: hybrid_k.yaml
configs/aug/: simclr.yaml  swav.yaml
configs/data/: imagenet.yaml  imagenet1k.yaml  loader.yaml  synthetic.yaml
configs/diagnostics/: spectra.yaml
configs/eval/: efficiency_dist.yaml  efficiency_single.yaml  gradients.yaml  (+2 more)
docs/: TESTING.md  beta_ctrl.md  budgets.md  comms.md  energy.md  fidelity.md  memory.md  mixture.md  plots.md  presets.md  provenance.md  stress.md  sweeps.md  telemetry.md  third_moment.md  topr.md
mfcl/: __init__.py
scripts/: benchthroughput.py  makedatasetlists.py  plot_metrics.py
tests/: conftest.py  test_beta_ctrl.py  test_budget.py  test_class_packed.py  test_comms_logger.py  test_distributed_async.py  test_exact_logz.py  test_fidelity.py  test_gradients.py  test_hardness_metric.py  test_hybrid.py  test_imagenet1k.py  test_memory_monitor.py  test_mixture_estimator.py  test_moments.py  test_oom_search.py  test_plots_smoke.py  test_power.py  test_provenance.py  test_stability.py  test_sweep.py  test_third_moment.py  test_third_moment_integration.py  test_timers.py  test_topr.py  test_utils.py
tools/: __init__.py  aggregate.py  oom_search.py  plot_accuracy_vs_time.py  plot_energy_per_image.py  plot_fidelity_vs_tau.py  plot_memory_vs_batch.py  plot_runtime_vs_batch.py  plot_utils.py  sweep.py
(+241 files in other folders)
